--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.13"
 dependencies = [
     "ipykernel>=7.1.0",
     "ipywidgets>=8.1.8",
+    "openai>=2.15.0",
     "pydantic>=2.12.5",
 ]
 
