--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "ipywidgets>=8.1.8",
     "openai>=2.15.0",
     "pydantic>=2.12.5",
+    "pydantic-settings>=2.12.0",
+    "tiktoken>=0.12.0",
 ]
 
 [project.scripts]
