--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,17 @@ authors = [
 ]
 requires-python = ">=3.13"
 dependencies = [
+    "httpx>=0.27.0",
     "ipykernel>=7.1.0",
     "ipywidgets>=8.1.8",
+    "mcp>=1.0.0",
     "openai>=2.15.0",
+    "opentelemetry-api>=1.20.0",
+    "opentelemetry-sdk>=1.20.0",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
+    "pytest>=9.0.2",
+    "python-json-logger>=2.0.7",
     "tiktoken>=0.12.0",
 ]
 
