feat: Add media serialization and deserialization for tool messages
- Introduced _types.py for handling media content serialization (images and strings).
- Implemented serialize_media_content and deserialize_media_content functions.
- Enhanced client_messages.py to support multimodal content in UserMessage and AssistantMessage.
- Added ToolExecutionResultMessage to handle tool responses with serialized content.
- Created OpenAIClient for interfacing with OpenAI API, supporting chat completions and tool calls.
- Implemented token counting using tiktoken for message inputs.
- Added utility functions in utils.py for media handling.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "tiktoken>=0.12.0",
     "fastapi>=0.128.0",
     "opentelemetry-instrumentation-fastapi>=0.60b1",
+    "pillow>=12.1.0",
 ]
 
 [project.scripts]
