--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ dependencies = [
     "fastapi>=0.128.0",
     "opentelemetry-instrumentation-fastapi>=0.60b1",
     "pillow>=12.1.0",
+    "fastmcp>=2.14.5",
+    "mcp-server-fetch>=2025.1.17",
+    "playwright>=1.58.0",
 ]
 
 [project.scripts]
