feat: add agent execution result structures with multimodal support
- Introduced `AgentRunResult`, `StepResult`, and `ToolCallRecord` models to encapsulate agent execution results.
- Implemented `RunStatus` enum to represent various terminal states of an agent run.
- Added support for multimodal outputs (text, images, audio, video) in the result structures.
- Included methods for JSON serialization, summary generation, and convenience accessors for output and media types.
- Ensured zero duplication and full serializability in the design.

--- a/docker/grafana/provisioning/datasources/datasource.yaml
+++ b/docker/grafana/provisioning/datasources/datasource.yaml
@@ -20,7 +20,7 @@ datasources:
         enabled: true
       search:
         hide: false
-      lokiSearch:
+      tracesToMetrics:
+        datasourceUid: 'prometheus'
+      tracesToLogs:
         datasourceUid: 'loki'
-      traceQuery:
-        limit: 20
