--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,10 @@ services:
       - ./docker/tempo/tempo.yaml:/etc/tempo.yaml
       - ./docker/tempo/data:/tmp/tempo
     ports:
-      - "3200:3200"
-      - "4317:4317"
-      - "4318:4318"
+      - "3200:3200"   # HTTP
+      - "9095:9095"   # gRPC
+      - "4317:4317"   # OTLP gRPC
+      - "4318:4318"   # OTLP HTTP
 
   grafana:
     image: grafana/grafana:latest
