feat: Implement async database layer with SQLAlchemy and asyncpg
- Added `database.py` for async database connection management.
- Introduced `init_db`, `close_db`, and session management functions.
- Created ORM models in `models.py` for users, threads, steps, elements, and feedbacks.
- Developed lifecycle hooks in `hooks.py` for chat session events.
- Established API routes for chat, feedback, and thread management in `routes/`.
- Implemented service layer for CRUD operations and agent message persistence in `services/`.
- Defined Pydantic schemas for request and response validation in `schemas.py`.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,9 @@ dependencies = [
     "fastmcp>=2.14.5",
     "mcp-server-fetch>=2025.1.17",
     "playwright>=1.58.0",
+    "sqlalchemy>=2.0.46",
+    "asyncpg>=0.30.0",
+    "uvicorn[standard]>=0.34.0",
 ]
 
 [project.scripts]
