Remove outdated documentation files and update project structure
- Deleted `GETTING_STARTED.md`, `MCP_GUIDE.md`, `MCP_NATIVE_ARCHITECTURE.md`, and `ROADMAP.md` as they are no longer relevant.
- Updated `pyproject.toml` to specify the package directory for building the wheel.

--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -15,8 +15,8 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: your-registry/agent-frontend:latest  # Replace with your image
-        imagePullPolicy: Always
+        image: agent-frontend:latest
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 3000
           name: http
