--- a/k8s/secrets.yaml
+++ b/k8s/secrets.yaml
@@ -7,7 +7,7 @@ type: Opaque
 stringData:
   # Database password
   DB_PASSWORD: "CHANGEME_your-secure-db-password"
-  DATABASE_URL: "postgresql://agent:CHANGEME_your-secure-db-password@postgres:5432/agent_framework"
+  DATABASE_URL: "postgresql+asyncpg://agent:CHANGEME_your-secure-db-password@postgres:5432/agent_framework"
   
   # Encryption key (generate with: python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())")
   ENCRYPTION_KEY: "CHANGEME_your-32-byte-encryption-key"
