--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -15,10 +15,10 @@ spec:
     spec:
       containers:
       - name: backend
-        image: your-registry/agent-backend:latest  # Replace with your image
-        imagePullPolicy: Always
+        image: agent-backend:latest
+        imagePullPolicy: IfNotPresent
         ports:
-        - containerPort: 8001
+        - containerPort: 8000
           name: http
         env:
         - name: DATABASE_URL
@@ -66,13 +66,13 @@ spec:
         livenessProbe:
           httpGet:
             path: /health
-            port: 8001
+            port: 8000
           initialDelaySeconds: 30
           periodSeconds: 10
         readinessProbe:
           httpGet:
             path: /health
-            port: 8001
+            port: 8000
           initialDelaySeconds: 10
           periodSeconds: 5
 ---
@@ -85,6 +85,6 @@ spec:
   selector:
     app: agent-backend
   ports:
-  - port: 8001
-    targetPort: 8001
+  - port: 8000
+    targetPort: 8000
   type: ClusterIP
