--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,3 +42,10 @@ agent-framework = "agent_framework:main"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "opensearch-py>=3.1.0",
+    "opensearch-py-ml>=1.3.0",
+    "polars>=1.38.1",
+]
