--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "sqlalchemy>=2.0.46",
     "asyncpg>=0.30.0",
     "uvicorn[standard]>=0.34.0",
+    "firecracker-python>=0.0.5",
 ]
 
 [project.scripts]
