feat: Implement Code Interpreter service with session management and VM lifecycle
- Add CodeInterpreterClient for HTTP communication with code-interpreter pods.
- Introduce SessionManager to manage persistent Firecracker VMs for each session.
- Create CodeInterpreterTool for executing code in a session-aware manner.
- Implement VMManager to handle Firecracker VM creation, execution, and destruction.
- Add VMPool for managing a pool of warm VMs to reduce latency.
- Include update_agent.sh script for fast rootfs updates without full rebuilds.
- Enhance error handling and logging throughout the codebase.

--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -56,6 +56,36 @@ spec:
             configMapKeyRef:
               name: agent-config
               key: PORT
+        # Code Interpreter service (separate pod)
+        - name: CODE_INTERPRETER_URL
+          valueFrom:
+            configMapKeyRef:
+              name: agent-config
+              key: CODE_INTERPRETER_URL
+        - name: CI_AUTH_TOKEN
+          valueFrom:
+            secretKeyRef:
+              name: agent-secrets
+              key: CI_AUTH_TOKEN
+              optional: true
+        - name: CI_REPLICAS
+          valueFrom:
+            configMapKeyRef:
+              name: agent-config
+              key: CI_REPLICAS
+              optional: true
+        - name: CI_HEADLESS_SERVICE
+          valueFrom:
+            configMapKeyRef:
+              name: agent-config
+              key: CI_HEADLESS_SERVICE
+              optional: true
+        - name: CI_NAMESPACE
+          valueFrom:
+            configMapKeyRef:
+              name: agent-config
+              key: CI_NAMESPACE
+              optional: true
         resources:
           requests:
             memory: "1Gi"
